Add table lookup entry point to SqlToSubstrait (#26)
* Add table lookup entry point to SqlToSubstrait

Co-authored-by: Jacques Nadeau <jacquesnadeau@gmail.com>